# smol

./: README.md  dune-project  smol.opam
examples/: 1.ml  2.ml  3.ml  4.ml  5.ml
lib/: alpha.ml  ast.ml  dune  eval.ml  id.ml  infer.ml  infer.mli  lexer.mll  parser.mly  syntax.ml  tast.ml  type.ml  unify.ml  value.ml
